Coach card align fixed - Matias Figueroa

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ html {
   }
 
   .animate-scroll {
-    animation: scroll 40s linear infinite;
+    animation: scroll 60s linear infinite;
   }
 }
 
